force-app/main/default/objects/Integration_Log__c/fields/ReqBody__c.field-meta.xml
<CustomField>
    <fullName>ReqBody__c</fullName>
    <label>Json ReqBody</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>