force-app/main/default/objects/Integration_Log__c/fields/Success_Id__c.field-meta.xml
<CustomField>
    <fullName>Success_Id__c</fullName>
    <description>Stores the Id of the successfully created Record</description>
    <label>Success_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>