force-app/main/default/objects/Integration_Log__c/fields/Success_Json__c.field-meta.xml
<CustomField>
    <fullName>Success_Json__c</fullName>
    <description>Stores the Success record details</description>
    <label>Success_Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>