force-app/main/default/objects/Integration_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Azure create customer</fullName>
            </value>
            <value>
                <fullName>postPaymentWestPac</fullName>
            </value>
            <value>
                <fullName>getFirmOfferForElecForm</fullName>
            </value>
            <value>
                <fullName>getInverters</fullName>
            </value>
            <value>
                <fullName>createDERApplication</fullName>
            </value>
            <value>
                <fullName>validateNMIandMeterNum</fullName>
            </value>
            <value>
                <fullName>getDERApplicationDetails</fullName>
            </value>
            <value>
                <fullName>updateDERApplication</fullName>
            </value>
            <value>
                <fullName>toPopulateInverter</fullName>
            </value>
            <value>
                <fullName>toMergeInverterLists</fullName>
            </value>
            <value>
                <fullName>insertIntoCECInvertersMDT</fullName>
            </value>
            <value>
                <fullName>updateAndDeployMetadata</fullName>
            </value>
            <value>
                <fullName>invokeMethod</fullName>
            </value>
            <value>
                <fullName>upsertRecordData</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>