force-app/main/default/objects/Integration_Log__c/recordTypes/ElectricalFormRecordType.recordType-meta.xml
<RecordType>
    <fullName>ElectricalFormRecordType</fullName>
    <active>true</active>
    <label>ElectricalFormRecordType</label>
</RecordType>