force-app/main/default/objects/Integration_Log__c/recordTypes/SolarFormRecordType.recordType-meta.xml
<RecordType>
    <fullName>SolarFormRecordType</fullName>
    <active>true</active>
    <label>SolarFormRecordType</label>
</RecordType>