force-app/main/default/objects/Integration_Log__c/listViews/Electrical_Forms_Logs_1.listView-meta.xml
<ListView>
    <fullName>Electrical_Forms_Logs_1</fullName>
    <columns>NAME</columns>
    <columns>Application_Type__c</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ReqBody__c</columns>
    <columns>Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Type__c</field>
        <operation>contains</operation>
        <value>elec</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>upsertRecordData</value>
    </filters>
    <label>Electrical Forms Logs</label>
</ListView>