force-app/main/default/objects/Integration_Log__c/listViews/Solar_Forms_Logs.listView-meta.xml
<ListView>
    <fullName>Solar_Forms_Logs</fullName>
    <columns>NAME</columns>
    <columns>Application_Type__c</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ReqBody__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Type__c</field>
        <operation>contains</operation>
        <value>solar</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Successful</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>1/4/2024 12:00 AM</value>
    </filters>
    <label>Solar Forms Logs</label>
</ListView>